--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <a href="https://manguu.com.tr/espresso" class="button">KATEGORİYE GİT</a>
                 </div>
             </div>
-            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/7blxwsp.png');">
+            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/ifjkn70.jpg');">
                 <div class="content">
                     <h1>MANGUU COFFEE</h1>
                     <p>Her Köşede Aynı Lezzet</p>
