--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
 <body>
     <div id="coffee-banner-container">
         <div id="coffee-banner-slider">
-            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/4s688q3.jpg');">
+            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/3vltfee.jpg');">
                 <div class="content">
                     <h1>MANGUU COFFEE</h1>
                     <p>Çiftlikten Fincanınıza Muhteşem Lezzet</p>
                     <a href="https://manguu.com.tr/tum-urunler" class="button" target="_top">ÜRÜNLERİMİZİ KEŞFEDİN</a>
                 </div>
             </div>
-            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/9laquge.png');">
+            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/nmckxy0.jpeg');">
                 <div class="content">
                     <h1>Sanatsal Lezzetin Adresi</h1>
                     <p>Zengin Espresso Çekirdeği Çeşitlerimiz</p>
                     <a href="https://manguu.com.tr/espresso" class="button" target="_top">KATEGORİYE GİT</a>
                 </div>
             </div>
-            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/7blxwsp.png');">
+            <div class="coffee-banner" style="background-image: url('https://i.hizliresim.com/3d32tt0.jpg');">
                 <div class="content">
                     <h1>MANGUU COFFEE</h1>
                     <p>Her Köşede Aynı Lezzet</p>
